--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#config file for s3 bucket
+#DO NOT UNDER ANY CIRCUMSTANCES PUSH THE CONFIG FILE TO GITHUB
+**/*.cfg
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -152,9 +156,4 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+
