--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #config file for s3 bucket
 #DO NOT UNDER ANY CIRCUMSTANCES PUSH THE CONFIG FILE TO GITHUB
 **/*.cfg
+**/.ipynb_checkpoints
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -80,6 +81,7 @@ docs/_build/
 target/
 
 # Jupyter Notebook
+#DO NOT DELETE THIS UNDER ANY CIRCUMSTANCES
 .ipynb_checkpoints
 
 # IPython
